vlib/v/checker/tests/invert_other_types_bits_error.vv
fn main() {
	println(~3.0)
	println(~10.5)
	println(~'2')
	println(~[2, 4, 6])
}
